#23 refactor 2 extract method