@@ -8,7 +8,6 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static java.util.Arrays.stream;
@@ -63,31 +62,26 @@ class InjectionProvider<T> implements ContextConfig.Provider<T> {
 
     private static <T> List<Field> getFields(Class<T> component) {
         List<Field> fields = new ArrayList<>();
-        for (Class<?> cur = component; cur != Object.class; cur = cur.getSuperclass())
-            fields.addAll(stream(cur.getDeclaredFields()).filter(f -> f.isAnnotationPresent(Inject.class)).toList());
+        for (Class<?> cur = component; cur != Object.class; cur = cur.getSuperclass()) {
+            fields.addAll(injectable(cur.getDeclaredFields()).toList());
+        }
         return fields;
     }
 
     private static <T> List<Method> getMethods(Class<T> component) {
         List<Method> methods = new ArrayList<>();
-        for (Class<?> cur = component; cur != Object.class; cur = cur.getSuperclass())
-            methods.addAll(stream(cur.getDeclaredMethods()).filter(m -> m.isAnnotationPresent(Inject.class))
-                    .filter(m -> methods.stream().noneMatch(isSameMethod(m)))
-                    .filter(m -> stream(component.getDeclaredMethods()).filter(m1 -> !m1.isAnnotationPresent(Inject.class))
-                            .noneMatch(isSameMethod(m)))
+        for (Class<?> cur = component; cur != Object.class; cur = cur.getSuperclass()) {
+            methods.addAll(injectable(cur.getDeclaredMethods())
+                    .filter(m -> isOverrideByInjectMethod(methods, m))
+                    .filter(m -> isOverrideByNoInjectMethod(component, m))
                     .toList());
+        }
         Collections.reverse(methods);
         return methods;
     }
 
-    private static Predicate<Method> isSameMethod(Method m) {
-        return o -> o.getName().equals(m.getName()) &&
-                Arrays.equals(o.getParameterTypes(), m.getParameterTypes());
-    }
-
     private static <T> Constructor<T> getConstructor(Class<T> implementation) {
-        List<Constructor<?>> constructors = stream(implementation.getConstructors())
-                .filter(c -> c.isAnnotationPresent(Inject.class)).collect(Collectors.toList());
+        List<Constructor<?>> constructors = injectable(implementation.getConstructors()).toList();
         if (constructors.size() > 1) throw new IllegalComponentException();
 
         return (Constructor<T>) constructors.stream()
@@ -99,4 +93,23 @@ class InjectionProvider<T> implements ContextConfig.Provider<T> {
                     }
                 });
     }
+
+    private static <T extends AnnotatedElement> Stream<T> injectable(T[] elements) {
+        return stream(elements).filter(f -> f.isAnnotationPresent(Inject.class));
+    }
+
+    private static <T> boolean isOverrideByNoInjectMethod(Class<T> component, Method m) {
+        return stream(component.getDeclaredMethods()).filter(m1 -> !m1.isAnnotationPresent(Inject.class))
+                .noneMatch(isSameMethod(m));
+    }
+
+    private static boolean isOverrideByInjectMethod(List<Method> methods, Method m) {
+        return methods.stream().noneMatch(isSameMethod(m));
+    }
+
+    private static Predicate<Method> isSameMethod(Method m) {
+        return o -> o.getName().equals(m.getName()) &&
+                Arrays.equals(o.getParameterTypes(), m.getParameterTypes());
+    }
+
 }
